Tue Aug 26 18:06:51 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: minor update

Tue Aug 26 17:58:46 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: lots of updates, stylistic and fixing
	  errors, also add ShowLastSession.

	* configure.in: raise version number

	* config/Makefile.am: create log dir correctly

	* README: fixed non-sensical sentence

	* gdm.spec.in: make this work again

Mon Aug 25 16:48:20 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.102

Mon Aug 25 16:27:09 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/errorgui.c, daemon/gdm.h, daemon/display.c:
	  if we can't use the file ~/.xsession-errors, try
	  /tmp/xses-<user>.XXXXXX using mkstemp.

	* docs/C/gdm.xml: update

	* NEWS: update

Mon Aug 25 13:55:09 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.h, daemon/auth.[ch], daemon/xdmcp.c, daemon/server.c:
	  Server auth file now uses FamilyWild and we set up the different
	  access stuff for the user auth file.  Don't add FamilyInternet
	  stuff to the xauth file if we start the server with
	  "-nolisten tcp".  The purging is done right and doesn't
	  mistakenly whack entries we didn't add.

	* NEWS: update

Mon Aug 25 11:13:08 2003  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c: make insensitive the options which make no sense
	  in the security page when actions menu is off.  Partly fixes
	  #120639, the other part can be fixed after UI freeze is off.

	* docs/C/gdm.xml: update the SystemMenu (Actions menu) key
	  description.

Mon Aug 25 10:47:30 2003  George Lebl <jirka@5z.com>

	* daemon/auth.c: if the .Xauthority would be empty, just
	  unlink the file.  That is nicer to systems with quotas.

	* daemon/slave.c: It appears some people are not letting
	  us redirect the ~/.xsession-errors and close the pipe
	  for us and we weren't handling EOF correctly (and ran
	  into a very tight loop then).  This fixes #120580.
	  Also fix select usage, and fix some minor bugs with